# EdgeDetection

./: .gitignore
hw/: CMakeLists.txt
hw/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
hw/hw/: CMakeLists.txt  hw.cpp  hw.h
hw/third_part/: export.7z
hw/third_part/export/installed/vcpkg/info/: libpng_1.6.37-6_x64-windows.list
hw/third_part/export/installed/x64-windows/share/libpng/: vcpkg_abi_info.txt
hw/third_part/export/installed/x64-windows/share/zlib/: vcpkg_abi_info.txt
